--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 @import './mixin.scss';
 
 * {
@@ -9,6 +10,6 @@
 html,
 body .app {
 	font-family: Arial, Helvetica, 'STHeiti STXihei', 'Microsoft YaHei', Tohoma, sans-serif;
-	background-color: #f8f8f8;
-	color: #333;
+	background-color: $background-color;
+	color: $color;
 }
